--- a/core/templates/core/helpdesk/ticket_detail.html
+++ b/core/templates/core/helpdesk/ticket_detail.html
@@ -279,7 +279,14 @@
 <!-- Loading Overlay (GLOBAL) -->
 <div id="loadingOverlay" class="loading-overlay hidden">
     <div class="loader-box">
-        <div class="spinner"></div>
+        <div class="spinner">
+            <div class="spinner-inner">
+                <div class="spinner-circle"></div>
+                <div class="spinner-circle"></div>
+                <div class="spinner-circle"></div>
+            </div>
+        </div>
+        <p class="loading-text">Processing...</p>
     </div>
 </div>
 
