--- a/core/templates/core/helpdesk/create_ticket.html
+++ b/core/templates/core/helpdesk/create_ticket.html
@@ -121,7 +121,7 @@
 
         <div class="form-actions">
             <button type="submit" name="create" class="btn btn-primary">Create</button>
-            <button type="submit" name="create_another" class="btn btn-outline">Create & Add Another</button>
+            <!--<button type="submit" name="create_another" class="btn btn-outline">Create & Add Another</button>-->
             <a href="{% url 'tickets' %}" class="btn btn-cancel">Cancel</a>
         </div>
 
